Kubernetes/tasklesta/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lesta-start
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lesta-start
  template:
    metadata:
      labels:
        app: lesta-start
    spec:
      containers:
        - name: app
          image: lesta-start:7.1
          ports:
            - containerPort: 8080
