Kubernetes/tasklesta/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lesta-start-service
spec:
  type: ClusterIP
  selector:
    app: lesta-start
  ports:
    - port: 80
      targetPort: 8080
